<resources>
    <string name="app_name">HolaMundo</string>
    <string name="titulo_main">WELCOME</string>
    <string name="titulo2">TITLE</string>
    <string name="button_main">VALIDATE</string>
    <string name="txt_oferta">OFERTA!!</string>
    <string name="txt_cantidad">Cantidad:</string>
    <string name="unidades">0</string>
    <string name="btnReservar">Reservar</string>
    <string name="dialog_message">Alerta</string>
    <string name="dialog_title">Cuadro de alerta</string>
</resources>
